menu banner image spacong fix on mobile

--- a/web/themes/custom/myusf/sass/src/partials/_boxes.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_boxes.scss
@@ -965,7 +965,7 @@ h2.carousel-overlay:before {
     margin-left: 0;
     margin-right: 0;
     @include media-breakpoint-down(phone) {
-        height: 160px;        
+        margin-bottom: 5rem;     
     }
 
     @include media-breakpoint-up(2560xl_desktop) {
